# logos-app-template

./: .bazelignore  .bazelrc  .gitignore  BUILD  MODULE.bazel  WORKSPACE  bazel-logos-app-template  maven_install.json  notes.txt  package.json  pnpm-lock.yaml  swc.config.js  tsconfig.json
.ijwb/: .bazelproject
app/example/: BUILD
app/example/jobs/email/: BUILD
app/example/jobs/feeds/: BUILD
app/example/module/: BUILD  ExampleModule.java
app/example/proto/: BUILD  feed.proto
app/example/service/: BUILD  ExampleStorageService.java  FeedService.java  FrontendService.java
app/example/storage/: BUILD
app/example/storage/migrations/: 00001_schema_example_app.sql  00002_table_example_app_example.sql  BUILD
app/example/web/: BUILD  frame-root.ts  index.ts  rollup.config.mjs  view-profile.ts
app/example/web/components/: base-router.ts  example-app.ts
app/example/web/entity/: source-imap-create.ts
app/example/web/module/: example-module.ts
